# sacred-composer

./: .dockerignore  .env.example  .gitignore  ALBUM_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GAMEPLAN.md  HANDOVER.md  KNOWLEDGE_BASE.md  LICENSE  LISTENING_GUIDE.md  PATTERNS_OF_CREATION.md  PRINCIPLES.md  README.md  ROADMAP.md  SACRED_COMPOSER_SPEC.md  SACRED_GEOMETRY_AND_MUSIC.md  SYSTEM_ARCHITECTURE.py  api.py  best_of_n.py  calibrate_fast_eval.py  classical_music_gen.py  composed_output.mid  composed_variations.mid  composer.py  composition_32bar.mid  discord_bot.py  eval_best_sonata.mid  eval_minor_sonata.mid  eval_seed_123.mid  eval_seed_42.mid  eval_seed_77.mid  eval_sonata.mid  eval_ternary.mid  eval_v2_sonata.mid  eval_variations.mid  evaluation_framework.py  example_variations_f_major.mid  fly.toml  (+43 more)
.streamlit/: config.toml
composer/: __init__.py  __main__.py  _rng.py  parser.py  pipeline.py  voice_leader.py
docs/: bridges2026_abstract.md  index.html  manim_fibonacci.py  style.css  youtube_script_ep1.md
examples/: demo.py  sacred_examples.py  sacred_examples_phase2.py  sacred_examples_phase3.py  sacred_showcase.py  sacred_showcase_v2.py  sonification_examples.py  spotify_album.py
pages/: 1_About.py  2_Gallery.py
sacred_composer/: __init__.py  __main__.py  adaptive.py  bridge.py  builder.py  combiners.py  constants.py  constraints.py  core.py  evaluate.py  harmony.py  lilypond.py  mappers.py  musicxml.py  optimizer.py  orchestration.py  osc_bridge.py  patterns.py  psychoacoustics.py  tension.py  variation.py  wav_renderer.py  world_music.py
(+92 files in other folders)
