[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sacred-composer"
version = "1.0.0"
description = "Deterministic music composition from mathematical and natural patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Konrad Reyhe"}]
keywords = ["music", "composition", "algorithmic", "mathematics", "midi", "patterns"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "midiutil",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
api = ["fastapi", "uvicorn[standard]"]
audio = ["pyfluidsynth"]
notation = ["music21"]
optimize = ["optuna"]
discord = ["discord.py"]
playground = ["streamlit"]
dev = ["pytest"]
all = ["fastapi", "uvicorn[standard]", "music21", "optuna", "streamlit", "pytest"]

[project.urls]
Homepage = "https://github.com/KonradReyhe/MUSIK"
Documentation = "https://github.com/KonradReyhe/MUSIK/blob/master/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
